# pydantic-openapi-sdk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test-real-api.yml
configs/: README.md  petstore.yaml
examples/: README.md  basic_usage.py  complete_example.py  test_petstore_client.py
pydantic_openapi_sdk/: __init__.py  cli.py  config.py  generator.py  model_generator.py  parser.py
pydantic_openapi_sdk/templates/: client.py.j2  exceptions.py.j2
